fade-in-gallery

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		</section>
 
 		<section class="part" attribute-in-html="attribute!">
-			<h2> Cool 3D feeling image gallery</h2>
+			<h2> <a href="#!" attrbref="fade-in-gallery/fade-gallery.html" onclick="return false" onmousedown="myFunction(this.id)" id="redirect-c" > Cool 3D feeling image gallery </a></h2>
 			<p> Interactive gallery with flexboxs, typical shape and clean looking design, the main image changes with fade in effect. 
 			</p>
 		</section>
