--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
 					<h2 class="title">DE ONDRE</h2>
 				</div>
 			</div>
-
+<br>
+<br>
 			<p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+<br>
 			<div class="subtitle-container">
+
 				<div class="subtitle sub2">
 					<h2>Subt2itl22e</h2>
 				</div>
@@ -58,17 +61,18 @@
 		<section class="overlayPart">
 			<div class="titleWrap">
 				<div class="de-title-case">	
-					<h2 class="title">TOUCH</h2>
+					<h2 class="title">I'M MASSIMO</h2>
 					<h2 class="title">&nbsp</h2>
-					<h2 class="title">TO VIEW</h2>
+					<h2 class="title">HELLO</h2>
 				</div>
 			</div>
-			<p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+<br>
+<br>
+			<p class="menu-description">I grew the passion of coding and web develpoment in the last few years. I've always been interested in computers and how they work, so in the last time having more time to put my portfolio together i tryed to create this "webpage-portfolio-app". I am currently searching  a job as junior web developer in Amsterdam, near to where i live now.<strong> My contact:</strong></p>
+<br>
 			<div class="subtitle-container">
 				<div class="subtitle sub2">
-					<h2>Subt2itl22e</h2>
+					<h2>massimoganzerli90@gmail.com</h2>
 				</div>
 			</div>
 		</section>
@@ -83,8 +87,10 @@
 					<h2 class="title">SEE ALSO</h2>
 				</div>
 			</div>
-
+<br>
+<br>
 			<p class="menu-description"> In my github profile i've uploaded recently some projects, when i find a nicer way to do things or for changing somethinngin in style or functionality i push something to that project. Some projects are more recent but sometimes i try to see if i have something older to push to Github.. </p>
+<br>
 			<div class="subtitle-container">
 				<a href="https://github.com/ganzerli">
 				<div class="subtitle sub2">
@@ -107,8 +113,8 @@
 		</section>
 
 		<section class="part" attribute-in-html="attribute!">
-			<h2>smaller buttons</h2>
-			<p> a bit mr practcal wit animation
+			<h2><a href="#!" attrbref="sass-lodge/index.html" onclick="return false" onmousedown="myFunction(this.id)" id="redirect-d" >LODGE RENT RESPONSIVE WEBPAGE</a></h2>
+			<p> A webpage made with sass for renting small houses and lodges for weekends, fully responsive with modern design.
 			</p>
 		</section>
 
