--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			</div>
 <br>
 <br>
-			<p class="menu-description">I grew the passion of coding and web develpoment in the last few years. I've always been interested in computers and how they work, so in the last time having more time to put my portfolio together i tryed to create this "webpage-portfolio-app". I am currently searching  a job as junior web developer in Amsterdam, near to where i live now.<strong> My contact:</strong></p>
+			<p class="menu-description">I grew the passion of coding and web develpoment in the spare time. I've always been interested in computers and how they work, so now having more time to put a website together I've tried to create this "webpage-portfolio-app". I am currently searching  a job as junior web developer in Amsterdam, near to where i live now.<strong> My contact:</strong></p>
 <br>
 			<div class="subtitle-container">
 				<div class="subtitle sub2">
@@ -131,7 +131,7 @@
 		</section>
 
 		<section class="part" attribute-in-html="attribute!">
-			<h2>a simple slider idea</h2>
+			<h2><a href="#!" attrbref="pic-slider/slider.html" onclick="return false" onmousedown="myFunction(this.id)" id="redirect-e" >SIMPLE SLIDER</a></h2>
 			<p> 
 				A simple slider, the dimension of the picture can be easily changed, navigation at the sides, slides forwards and backwards.
 			</p>
@@ -166,7 +166,7 @@
 
 		<!--              ...NAVIGATION                                 -->
 
-		<div id="fixed1">
+		<div id="fixed1" class="fixed-btn">
 			<div class="arrow back btn">
 				<div class="arrow-inside">
 					<div class="arrow-line"></div>
@@ -177,7 +177,7 @@
 		</div>
 
 
-		<div id="fixed2">
+		<div id="fixed2" class="fixed-btn">
 			<div class="arrow btn">
 				<div class="arrow-inside">
 					<div class="arrow-line"></div>
