--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>PORTFOLIO</title>
 
 	<meta charset="utf-8">
+	<meta name="viewport" content="height=device-height , width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Bowlby One SC' rel='stylesheet'>
 	<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="styles.css">
@@ -15,10 +16,10 @@
 
 	<section class="welcome-container">
 		<div class="skew left">
-			<h2 class="welcome-text">WELCOME</h2>
+			<h2 class="welcome-text"></h2>
 		</div>
 		<div class="skew right">
-			<h2 class="welcome-text">WELCOME</h2>
+			<h2 class="welcome-text"></h2>
 		</div>
 	</section>
 
@@ -38,21 +39,19 @@
 
 			<div class="titleWrap">
 				<div class="de-title-case">	
-					<h2 class="title">ONE TITLE</h2>
+					<h2 class="title">AND CV</h2>
 					<h2 class="title">&nbsp</h2>
-					<h2 class="title">DE ONDRE</h2>
+					<h2 class="title">MORE INFOS</h2>
 				</div>
 			</div>
 <br>
 <br>
-			<p class="menu-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-<br>
+			<p class="menu-description"> Here is the link for further informatins about education and work experience.</p>
+
 			<div class="subtitle-container">
 
 				<div class="subtitle sub2">
-					<h2>Subt2itl22e</h2>
+					<h2>x</h2>
 				</div>
 			</div>
 		</section>
@@ -68,11 +67,11 @@
 			</div>
 <br>
 <br>
-			<p class="menu-description">I grew the passion of coding and web develpoment in the spare time. I've always been interested in computers and how they work, so now having more time to put a website together I've tried to create this "webpage-portfolio-app". I am currently searching  a job as junior web developer in Amsterdam, near to where i live now.<strong> My contact:</strong></p>
-<br>
+			<p class="menu-description">I grew the passion of coding and web develpoment in the spare time. I've always been interested in computers and how they work, so now having more time to put a website together I've tried to create this "portfolio-app". I am currently searching  a job as junior web developer in Amsterdam, near to where i live now. <br><br><strong class="menu-description">I am now always available per email at: massimoganzerli90@gmail.com</strong></p>
+
 			<div class="subtitle-container">
 				<div class="subtitle sub2">
-					<h2>massimoganzerli90@gmail.com</h2>
+					<h2 class="if-mobile">CV & EDUCATION</h2>
 				</div>
 			</div>
 		</section>
@@ -90,11 +89,11 @@
 <br>
 <br>
 			<p class="menu-description"> In my github profile i've uploaded recently some projects, when i find a nicer way to do things or for changing somethinngin in style or functionality i push something to that project. Some projects are more recent but sometimes i try to see if i have something older to push to Github.. </p>
-<br>
+
 			<div class="subtitle-container">
 				<a href="https://github.com/ganzerli">
 				<div class="subtitle sub2">
-					<h2>Subt2itl22e</h2>
+					<h2>Code On Github</h2>
 				</div>
 				</a>
 			</div>
@@ -144,23 +143,20 @@
 		</section>
 
 		<section class="part" attribute-in-html="attribute!">
-			<h2>the mega subtitle</h2>
-			<p> consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			<h2>subitle coming soon</h2>
+			<p> this project is not finished yet
 			</p>
 		</section>
 
 		<section class="part" attribute-in-html="attribute!">
-			<h2>the mega subtitle</h2>
-			<p> consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			<h2>subitle coming soon</h2>
+			<p> this project is not finished yet
 			</p>
 		</section>
 
 		<section class="part" attribute-in-html="attribute!">
-			<h2>the mega subtitle</h2>
-			<p> consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			<h2>subitle coming soon</h2>
+			<p> this project is not finished yet
 			</p>
 		</section>
 
