--- a/sass-lodge/index.html
+++ b/sass-lodge/index.html
@@ -82,24 +82,27 @@
             </div>
           </div>
           <div class="col-1-2">
-            <h3 class="tertiary-header mb-2">Feel the fresh air</h3>
-            <p class="presentation">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
-              rem qui obcaecati veniam nam provident voluptates quidem
-              exercitationem. Explicabo
-            </p>
-            <div class="if-mobile">
+            <div class="ml-4">
               <h3 class="tertiary-header mb-2">Feel the fresh air</h3>
-              <p class="presentation">
+              <p class="section-about-presentation">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Corporis, rem qui obcaecati veniam nam provident voluptates
                 quidem exercitationem. Explicabo
               </p>
+              <div class="if-mobile">
+                <h3 class="tertiary-header mb-2">Feel the fresh air</h3>
+                <p class="section-about-presentation">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Corporis, rem qui obcaecati veniam nam provident voluptates
+                  quidem exercitationem. Explicabo
+                </p>
+              </div>
+              <a href="#!" class="text-button mobile-up-2">More &rArr;</a>
             </div>
-            <a href="#!" class="text-button">More &rArr;</a>
           </div>
         </div>
       </section>
+
       <section class="info-section">
         <div class="row">
           <div class="col-1-4">
@@ -107,10 +110,8 @@
               <i class="infobox-icon icofont-opposite"></i>
               <h3 class="tertiary-header">Explore</h3>
               <p class="infobox-text">
-                hello all nice eah Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Fugit, impedit explicabo laudantium dolores
-                porro quos excepturi quod voluptate aliquam ipsa officia, libero
-                fugiat suscipit a maiores atque praesentium, delectus quas!
+                hello all nice yeah Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Fugit, impedit explicabo laudantium dol
               </p>
             </div>
           </div>
@@ -120,9 +121,7 @@
               <h3 class="tertiary-header">Environment</h3>
               <p class="infobox-text">
                 hello all nice eah Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Fugit, impedit explicabo laudantium dolores
-                porro quos excepturi quod voluptate aliquam ipsa officia, libero
-                fugiat suscipit a maiores atque praesentium, delectus quas!
+                adipisicing elit. Fugit, impedit explicabo laudantium dol
               </p>
             </div>
           </div>
@@ -132,9 +131,7 @@
               <h3 class="tertiary-header">Nature</h3>
               <p class="infobox-text">
                 hello all nice eah Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Fugit, impedit explicabo laudantium dolores
-                porro quos excepturi quod voluptate aliquam ipsa officia, libero
-                fugiat suscipit a maiores atque praesentium, delectus quas!
+                adipisicing elit. Fugit, impedit explicabo laudantium dol
               </p>
             </div>
           </div>
@@ -144,9 +141,7 @@
               <h3 class="tertiary-header">Outside</h3>
               <p class="infobox-text">
                 hello all nice eah Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Fugit, impedit explicabo laudantium dolores
-                porro quos excepturi quod voluptate aliquam ipsa officia, libero
-                fugiat suscipit a maiores atque praesentium, delectus quas!
+                adipisicing elit. Fugit, impedit explicabo laudantium dol
               </p>
             </div>
           </div>
@@ -154,7 +149,9 @@
       </section>
       <section class="section-offers">
         <div class="align-center mb-4">
-          <h2 class="secondary-header p-4" id="offers">OUR OFFERS</h2>
+          <h2 class="secondary-header p-4" id="offers">
+            OVERVIEW TOP 3 OFFERS
+          </h2>
         </div>
         <div class="row">
           <div class="col-1-3">
@@ -163,12 +160,11 @@
                 <div class="card-picture card-picture-1">&nbsp;</div>
                 <h4 class="card-title">
                   <span class="card-title-span card-title-span-1">
-                    Card Super Title !
+                    Inside The Forest
                   </span>
                 </h4>
-                <p class="card-descr mb-2">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Accusamus, aliquid!
+                <p class="card-descr m-2">
+                  Walk throught the forest, and touch the nature
                 </p>
                 <ul class="card-list">
                   <li>your preferred thing</li>
@@ -181,7 +177,7 @@
                 <div class="card-wrap">
                   <div class="card-price">
                     <p class="card-price-title">Only</p>
-                    <p class="card-price-money">1000 €</p>
+                    <p class="card-price-money">999€</p>
                   </div>
                   <a href="#popup" class="button-animated button-white"
                     >Get It !</a
@@ -190,18 +186,18 @@
               </div>
             </div>
           </div>
+
           <div class="col-1-3">
             <div class="card">
               <div class="card-side card-side-front">
                 <div class="card-picture card-picture-2">&nbsp;</div>
                 <h4 class="card-title">
                   <span class="card-title-span card-title-span-2" id="offers">
-                    Card Super Title !
+                    Stay and Relax
                   </span>
                 </h4>
-                <p class="card-descr mb-2">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Accusamus, aliquid!
+                <p class="card-descr m">
+                  Stay one day more the price charged will be only 2€!
                 </p>
                 <ul class="card-list">
                   <li>your preferred thing</li>
@@ -214,7 +210,7 @@
                 <div class="card-wrap">
                   <div class="card-price">
                     <p class="card-price-title">Only</p>
-                    <p class="card-price-money">1000 €</p>
+                    <p class="card-price-money">1001 €</p>
                   </div>
                   <a href="#popup" class="button-animated button-white"
                     >Get It !</a
@@ -223,18 +219,18 @@
               </div>
             </div>
           </div>
+
           <div class="col-1-3">
             <div class="card">
               <div class="card-side card-side-front">
                 <div class="card-picture card-picture-3">&nbsp;</div>
                 <h4 class="card-title">
                   <span class="card-title-span card-title-span-3">
-                    Card Super Title !
+                    On the Peak
                   </span>
                 </h4>
-                <p class="card-descr mb-2">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Accusamus, aliquid!
+                <p class="card-descr m-2">
+                  Run or sky up or down, you decide when and how!
                 </p>
                 <ul class="card-list">
                   <li>your preferred thing</li>
@@ -268,7 +264,7 @@
           </video>
         </div>
 
-        <div class="align-center mb-6 p-4">
+        <div class="align-center mb-2 p-4">
           <h2 class="secondary-header">ask our costumers</h2>
         </div>
 
@@ -281,7 +277,8 @@
           </figure>
           <div class="review-text">
             <h3 class="tertiry-header mb-2">
-              HERE I FOUND SOMETHING UNUSUAL AND AMAZING !
+              <br />
+              IN THIS PLACE I FOUND THE BEST LANDSCAPES
             </h3>
             <p class="comment">
               This place it was so fine, just arrived it was alredy particular
@@ -297,26 +294,24 @@
             <figcaption class="review-figcaption">Anna Takkes</figcaption>
           </figure>
           <div class="review-text">
-            <h3 class="tertiry-header mb-2">AMAZING !</h3>
+            <h3 class="tertiry-header mb-2">
+              I WASN'T FEELING SO WELL SINCE A LONG TIME AGO
+            </h3>
             <p class="comment">
               Typical decoration of the house inside, not to mention the whood
-              fire heating it's been really amazing, looking ouside is full of
-              colors shapes and you can feel always the silence...<span
-                class="review-opt"
-              >
-                Sometimes suddenly is possible to hear something from the
-                forest or just the wind which is very relaxing i will be back
-                !</span
-              >
+              fire heating it's been really amazing...<span class="review-opt">
+                Sometimes suddenly is possible to hear something from the forest
+                or just the wind which is very relaxing i will be back !
+              </span>
             </p>
           </div>
         </div>
       </section>
-      <section class="section-booking">
+      <section class="section-booking" id="booking">
         <div class="row">
           <div class="booking">
             <div class="booking-form">
-              <div class="p-6"><h2 class="secondary-header">Book Here</h2></div>
+              <div class="p-4"><h2 class="secondary-header">Book Here</h2></div>
               <!-- FORM -->
               <form action="#" class="form">
                 <div class="form-group">
@@ -352,7 +347,7 @@
                       name="switch-trough"
                     />
                     <label for="radio1" class="form-radio-label"
-                      ><span class="form-radio-button"></span> Radio1</label
+                      ><span class="form-radio-button"></span>Full</label
                     >
                   </div>
                   <div class="form-radio-group">
@@ -363,11 +358,11 @@
                       name="switch-trough"
                     />
                     <label for="radio2" class="form-radio-label"
-                      ><span class="form-radio-button"></span>Radio2</label
+                      ><span class="form-radio-button"></span>Empty</label
                     >
                   </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group form-mobile-center">
                   <button class="button-animated button-white p-4 gradient-bg">
                     S E N D
                   </button>
@@ -381,7 +376,7 @@
     </main>
     <footer class="footer align-center">
       <div class="footer-logo-box p-4 ">
-        <img src="/img/logo.jpg" alt="Footer Logo" />
+        <img src="img/logo.jpg" alt="Footer Logo" />
       </div>
 
       <div class="row">
@@ -401,7 +396,7 @@
                 <a href="#!" class="footer-link">Terms</a>
               </li>
               <li class="footer-item">
-                <a href="#!" class="footer-link">Rent sa Owner</a>
+                <a href="#!" class="footer-link">Owners</a>
               </li>
             </ul>
           </div>
@@ -426,17 +421,15 @@
         <div class="popup-right p-4">
           <a href="#offers" class="popup-close">&times;</a>
           <h2 class="secondary-header mb-2">Book now</h2>
-          <h3 class="tertiary-header mb-2">
-            &ndash; Please Read the Terms Before Booking
-          </h3>
+          <h3 class="tertiary-header mb-2">Check Terms Before Booking</h3>
           <p class="popup-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
             expedita cumque fugit repellendus dolorem facere neque, nobis nemo
-            quod. Adipisci amet et beatae praesentium rem, harum nihil labore
-            facere pariatur!quod. Adipisci amet et beatae praesentium rem, harum
-            nihil labore facere pariatur!
+            quod. Adipisci amet et bea
           </p>
-          <a href="#" class="button-animated gradient-bg">click</a>
+          <a href="#booking" class="button-animated gradient-bg"
+            >TAKE RESERVATION</a
+          >
         </div>
       </div>
     </div>
