--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<!-- 	 WELCOME TEXT FOR MEDIA SCREENS -->
 
+				<!-- -->
 
 	<!--  	FIRST WELCOME OVERLAY  -->
 
