responsive welcomr text

--- a/welcome-resonsive/index.html
+++ b/welcome-resonsive/index.html
@@ -20,12 +20,11 @@
         animation: opacity 1s ease-in forwards 3s;
       }
       .container {
-        background: green;
         width: 100vw;
         height: 100vh;
         max-width: 100vw;
         max-height: 100vh;
-        position: relative;
+        position: fixed;
         overflow: hidden;
         color: transparent;
         background: linear-gradient(270deg, #333fe3, #3df507, #e3ff00, #ff0000);
