--- a/index.html
+++ b/index.html
@@ -1,217 +1,338 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>PORTFOLIO</title>
+  <head>
+    <title>PORTFOLIO</title>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="height=device-height , width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<link href='https://fonts.googleapis.com/css?family=Bowlby One SC' rel='stylesheet'>
-	<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet"> 
-	<link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-<!-- 	 WELCOME TEXT FOR MEDIA SCREENS -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="height=1 , width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bowlby One SC"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Caveat+Brush"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
 
-				<!-- -->
+  <body>
+    <!-- WELCOME TEXT FOR MEDIA SCREENS -->
+    <div class="opacity-welcome-media">
+      <div class="container">
+        <ul class="welcome">
+          <li>W</li>
+          <li>E</li>
+          <li>L</li>
+          <li>C</li>
+          <li>O</li>
+          <li>M</li>
+          <li>E</li>
+        </ul>
+        <ul class="to">
+          <li>T</li>
+          <li>O</li>
+        </ul>
+        <ul class="my">
+          <li>M</li>
+          <li>Y</li>
+        </ul>
+        <ul class="portfolio">
+          <li>P</li>
+          <li>O</li>
+          <li>R</li>
+          <li>T</li>
+          <li>F</li>
+          <li>O</li>
+          <li>L</li>
+          <li>I</li>
+          <li>O</li>
+        </ul>
+      </div>
+    </div>
+    <!---->
 
-	<!--  	FIRST WELCOME OVERLAY  -->
+    <!-- FIRST WELCOME OVERLAY -->
 
-	<section class="welcome-container">
-		<div class="skew left">
-			<h2 class="welcome-text"></h2>
-		</div>
-		<div class="skew right">
-			<h2 class="welcome-text"></h2>
-		</div>
-	</section>
+    <section class="welcome-container">
+      <div class="skew left"><h2 class="welcome-text"></h2></div>
+      <div class="skew right"><h2 class="welcome-text"></h2></div>
+    </section>
 
-	<!-- 				MENU ICON TOP RIGHT				 -->
+    <!-- MENU ICON TOP RIGHT -->
 
-	<div id="menu-fixed" class="">
-		<div class="line"></div>
-		<div class="line"></div>
-		<div class="line"></div>
-	</div>
+    <div id="menu-fixed" class="">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </div>
 
-	<!--  MENU  INSIDE  -->
+    <!-- MENU  INSIDE -->
 
-	<div id="menu-container" class="">
+    <div id="menu-container" class="">
+      <section class="overlayPart">
+        <div class="titleWrap">
+          <div class="de-title-case">
+            <h2 class="title">AND CV</h2>
+            <h2 class="title">&nbsp</h2>
+            <h2 class="title">MORE INFOS</h2>
+          </div>
+        </div>
+        <br />
+        <br />
+        <p class="menu-description">
+          Here is the link for further informatins about education and work
+          experience.
+        </p>
 
-		<section class="overlayPart">
+        <div class="subtitle-container">
+          <div class="subtitle sub2"><h2>x</h2></div>
+        </div>
+      </section>
 
-			<div class="titleWrap">
-				<div class="de-title-case">	
-					<h2 class="title">AND CV</h2>
-					<h2 class="title">&nbsp</h2>
-					<h2 class="title">MORE INFOS</h2>
-				</div>
-			</div>
-<br>
-<br>
-			<p class="menu-description"> Here is the link for further informatins about education and work experience.</p>
+      <section class="overlayPart">
+        <div class="titleWrap">
+          <div class="de-title-case">
+            <h2 class="title">I'M MASSIMO</h2>
+            <h2 class="title">&nbsp</h2>
+            <h2 class="title">HELLO</h2>
+          </div>
+        </div>
+        <br />
+        <br />
+        <p class="menu-description">
+          I grew the passion of coding and web develpoment in the spare time.
+          I've always been interested in computers and how they work, so now
+          having more time to put a website together I've tried to create this
+          "portfolio-app". I am currently searching a job as junior web
+          developer in Amsterdam, near to where i live now. <br /><br /><strong
+            class="menu-description"
+            >I am now always available per email at:
+            massimoganzerli90@gmail.com</strong
+          >
+        </p>
 
-			<div class="subtitle-container">
+        <div class="subtitle-container">
+          <div class="subtitle sub2">
+            <h2 class="if-mobile">CV & EDUCATION</h2>
+          </div>
+        </div>
+      </section>
 
-				<div class="subtitle sub2">
-					<h2>x</h2>
-				</div>
-			</div>
-		</section>
+      <section class="overlayPart">
+        <div class="titleWrap">
+          <div class="de-title-case">
+            <h2 class="title">
+              <a href="https://github.com/ganzerli">MY GITHUB</a>
+            </h2>
+            <h2 class="title">&nbsp</h2>
+            <h2 class="title">SEE ALSO</h2>
+          </div>
+        </div>
+        <br />
+        <br />
+        <p class="menu-description">
+          In my github profile i've uploaded recently some projects, when i find
+          a nicer way to do things or for changing somethinngin in style or
+          functionality i push something to that project. Some projects are more
+          recent but sometimes i try to see if i have something older to push to
+          Github..
+        </p>
 
+        <div class="subtitle-container">
+          <a href="https://github.com/ganzerli">
+            <div class="subtitle sub2"><h2>Code On Github</h2></div>
+          </a>
+        </div>
+      </section>
+    </div>
 
-		<section class="overlayPart">
-			<div class="titleWrap">
-				<div class="de-title-case">	
-					<h2 class="title">I'M MASSIMO</h2>
-					<h2 class="title">&nbsp</h2>
-					<h2 class="title">HELLO</h2>
-				</div>
-			</div>
-<br>
-<br>
-			<p class="menu-description">I grew the passion of coding and web develpoment in the spare time. I've always been interested in computers and how they work, so now having more time to put a website together I've tried to create this "portfolio-app". I am currently searching  a job as junior web developer in Amsterdam, near to where i live now. <br><br><strong class="menu-description">I am now always available per email at: massimoganzerli90@gmail.com</strong></p>
+    <!-- main content -->
 
-			<div class="subtitle-container">
-				<div class="subtitle sub2">
-					<h2 class="if-mobile">CV & EDUCATION</h2>
-				</div>
-			</div>
-		</section>
+    <main id="wrapper">
+      <section class="part" attribute-in-html="attribute!">
+        <h2>Small Social App</h2>
+        <p>
+          Small social network like application with login registration ,
+          profile and the possibility to share posts metween users, watch other
+          profiles and like and comment posts
+        </p>
+      </section>
 
+      <section class="part" attribute-in-html="attribute!">
+        <h2>
+          <a
+            href="#!"
+            attrbref="sass-lodge/index.html"
+            onclick="return false"
+            onmousedown="myFunction(this.id)"
+            id="redirect-d"
+            >LODGE RENT RESPONSIVE WEBPAGE</a
+          >
+        </h2>
+        <p>
+          A webpage made with sass for renting small houses and lodges for
+          weekends, fully responsive with modern design.
+        </p>
+      </section>
 
-		<section class="overlayPart">
+      <section class="part" attribute-in-html="attribute!">
+        <h2>
+          <a
+            href="#!"
+            attrbref="git1/index.html"
+            onclick="return false"
+            onmousedown="myFunction(this.id)"
+            id="redirect-b"
+            >A Reasponsive Webpage</a
+          >
+        </h2>
+        <p>Responsive Colorful webpage on thema Travelling.</p>
+      </section>
 
-			<div class="titleWrap">
-				<div class="de-title-case">	
-					<h2 class="title"> <a href="https://github.com/ganzerli">MY GITHUB</a></h2>
-					<h2 class="title">&nbsp</h2>
-					<h2 class="title">SEE ALSO</h2>
-				</div>
-			</div>
-<br>
-<br>
-			<p class="menu-description"> In my github profile i've uploaded recently some projects, when i find a nicer way to do things or for changing somethinngin in style or functionality i push something to that project. Some projects are more recent but sometimes i try to see if i have something older to push to Github.. </p>
+      <section class="part" attribute-in-html="attribute!">
+        <h2>
+          <a
+            href="#!"
+            attrbref="shoot-game/game.html"
+            onclick="return false"
+            onmousedown="myFunction(this.id)"
+            id="redirect-a"
+            >SHOOTING GAME!</a
+          >
+        </h2>
+        <p>
+          A simple game made with javascript and html, the enemies are coming
+          from the top and the hero has to shoot a laser to destry them, untill
+          now tere are 3 level/states, gaining experience the hero and laser are
+          gitting better.
+        </p>
+      </section>
 
-			<div class="subtitle-container">
-				<a href="https://github.com/ganzerli">
-				<div class="subtitle sub2">
-					<h2>Code On Github</h2>
-				</div>
-				</a>
-			</div>
-		</section>
-	</div>
+      <section class="part" attribute-in-html="attribute!">
+        <h2>
+          <a
+            href="#!"
+            attrbref="pic-slider/slider.html"
+            onclick="return false"
+            onmousedown="myFunction(this.id)"
+            id="redirect-e"
+            >SIMPLE SLIDER</a
+          >
+        </h2>
+        <p>
+          A simple slider, the dimension of the picture can be easily changed,
+          navigation at the sides, slides forwards and backwards.
+        </p>
+      </section>
 
+      <section class="part" attribute-in-html="attribute!">
+        <h2>
+          <a
+            href="#!"
+            attrbref="fade-in-gallery/fade-gallery.html"
+            onclick="return false"
+            onmousedown="myFunction(this.id)"
+            id="redirect-c"
+          >
+            Cool 3D feeling image gallery
+          </a>
+        </h2>
+        <p>
+          Interactive gallery with flexboxs, typical shape and clean looking
+          design, the main image changes with fade in effect.
+        </p>
+      </section>
 
-	<!--  main content  -->
+      <section class="part" attribute-in-html="attribute!">
+        <h2>subitle coming soon</h2>
+        <p>this project is not finished yet</p>
+      </section>
 
-	<main id="wrapper">
+      <section class="part" attribute-in-html="attribute!">
+        <h2>subitle coming soon</h2>
+        <p>this project is not finished yet</p>
+      </section>
 
-		<section class="part" attribute-in-html="attribute!">
-			<h2>Small Social App</h2>
-			<p> Small social network like application with login registration , profile and the possibility to share posts metween users, watch other profiles and like and comment posts
-			</p>
-		</section>
+      <section class="part" attribute-in-html="attribute!">
+        <h2>subitle coming soon</h2>
+        <p>this project is not finished yet</p>
+      </section>
 
-		<section class="part" attribute-in-html="attribute!">
-			<h2><a href="#!" attrbref="sass-lodge/index.html" onclick="return false" onmousedown="myFunction(this.id)" id="redirect-d" >LODGE RENT RESPONSIVE WEBPAGE</a></h2>
-			<p> A webpage made with sass for renting small houses and lodges for weekends, fully responsive with modern design.
-			</p>
-		</section>
+      <!-- ...NAVIGATION -->
 
-		<section class="part" attribute-in-html="attribute!">
-			<h2><a href="#!" attrbref="git1/index.html" onclick="return false" onmousedown="myFunction(this.id)" id="redirect-b" >A Reasponsive Webpage</a></h2>
-			<p> Responsive Colorful webpage on thema Travelling. 
-			</p>
-		</section>
+      <div id="fixed1" class="fixed-btn">
+        <div class="arrow back btn">
+          <div class="arrow-inside">
+            <div class="arrow-line"></div>
+            <div class="arrow-line"></div>
+            <div class="arrow-line"></div>
+          </div>
+        </div>
+      </div>
 
-		<section class="part" attribute-in-html="attribute!">
-			<h2><a href="#!" attrbref="shoot-game/game.html" onclick="return false" onmousedown="myFunction(this.id)" id="redirect-a" >SHOOTING GAME!</a></h2>
-			<p> A simple game made with javascript and html, the enemies are coming from the top and the hero has to shoot a laser to destry them, untill now tere are 3 level/states, gaining experience the hero and laser are gitting better. 
-			</p>
-		</section>
+      <div id="fixed2" class="fixed-btn">
+        <div class="arrow btn">
+          <div class="arrow-inside">
+            <div class="arrow-line"></div>
+            <div class="arrow-line"></div>
+            <div class="arrow-line"></div>
+          </div>
+        </div>
+      </div>
+    </main>
 
-		<section class="part" attribute-in-html="attribute!">
-			<h2><a href="#!" attrbref="pic-slider/slider.html" onclick="return false" onmousedown="myFunction(this.id)" id="redirect-e" >SIMPLE SLIDER</a></h2>
-			<p> 
-				A simple slider, the dimension of the picture can be easily changed, navigation at the sides, slides forwards and backwards.
-			</p>
-		</section>
+    <script>
+      function preventDefault(e) {
+        e = e || window.event;
+        if (e.preventDefault) e.preventDefault();
+        e.returnValue = false;
+      }
 
-		<section class="part" attribute-in-html="attribute!">
-			<h2> <a href="#!" attrbref="fade-in-gallery/fade-gallery.html" onclick="return false" onmousedown="myFunction(this.id)" id="redirect-c" > Cool 3D feeling image gallery </a></h2>
-			<p> Interactive gallery with flexboxs, typical shape and clean looking design, the main image changes with fade in effect. 
-			</p>
-		</section>
+      function disableScroll() {
+        if (window.addEventListener)
+          // older FF
+          window.addEventListener("DOMMouseScroll", preventDefault, false);
+        window.onwheel = preventDefault; // modern standard
+        window.onmousewheel = document.onmousewheel = preventDefault; // older browsers, IE
+        window.ontouchmove = preventDefault; // mobile
+        document.onkeydown = preventDefaultForScrollKeys;
+      }
+      document.addEventListener("DOMContentLoaded", event => {
+        disableScroll();
+      });
+    </script>
 
-		<section class="part" attribute-in-html="attribute!">
-			<h2>subitle coming soon</h2>
-			<p> this project is not finished yet
-			</p>
-		</section>
-
-		<section class="part" attribute-in-html="attribute!">
-			<h2>subitle coming soon</h2>
-			<p> this project is not finished yet
-			</p>
-		</section>
-
-		<section class="part" attribute-in-html="attribute!">
-			<h2>subitle coming soon</h2>
-			<p> this project is not finished yet
-			</p>
-		</section>
-
-		<!--              ...NAVIGATION                                 -->
-
-		<div id="fixed1" class="fixed-btn">
-			<div class="arrow back btn">
-				<div class="arrow-inside">
-					<div class="arrow-line"></div>
-					<div class="arrow-line"></div>
-					<div class="arrow-line"></div>
-				</div>
-			</div>
-		</div>
-
-
-		<div id="fixed2" class="fixed-btn">
-			<div class="arrow btn">
-				<div class="arrow-inside">
-					<div class="arrow-line"></div>
-					<div class="arrow-line"></div>
-					<div class="arrow-line"></div>
-				</div>
-			</div>
-		</div>
-
-	</main>
-	<script>	
-
-
-		function myFunction(el) {
-			// the parameter is the id name
-			const idName = el;
-						//alert("the selected element id is "+ idName);
-			// take the wanted attribute of the element
-			let attribute = document.getElementById(idName).getAttribute("attrbref");
-			//getting current path
-			let myString = window.location.pathname;
-			//taking the last "index.html"  away from the path
-			var newString = myString.substr(0, myString.length-10);
-			// making a new path name according to the ATTRIBUTE
-			const myLocation = newString + attribute;
-			//adding class for the animation
-			document.getElementById(idName).parentElement.parentElement.classList.add("cover-screen");
-			//redirecting..
-			setTimeout(()=>location.replace(myLocation) ,700);
-			document.getElementById(idName).classList.add("cover-screen");
-		}
-	</script>
-	<!-- <script src="main.js"></script> not working -->
-	<script src="main.js"></script>
-	<script src="menu.js"></script>
-	<script src="welcome.js"></script>
-	
-</body>
+    <script>
+      function myFunction(el) {
+        // the parameter is the id name
+        const idName = el;
+        //alert("the selected element id is "+ idName);
+        // take the wanted attribute of the element
+        let attribute = document
+          .getElementById(idName)
+          .getAttribute("attrbref");
+        //getting current path
+        let myString = window.location.pathname;
+        //taking the last "index.html"  away from the path
+        var newString = myString.substr(0, myString.length - 10);
+        // making a new path name according to the ATTRIBUTE
+        const myLocation = newString + attribute;
+        //adding class for the animation
+        document
+          .getElementById(idName)
+          .parentElement.parentElement.classList.add("cover-screen");
+        //redirecting..
+        setTimeout(() => location.replace(myLocation), 700);
+        document.getElementById(idName).classList.add("cover-screen");
+      }
+    </script>
+    <!-- <script src="main.js"></script> not working -->
+    <script src="main.js"></script>
+    <script src="menu.js"></script>
+  <script src="welcome.js"></script> 
+  </body>
 </html>
