--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="height=1 , width=device-width, initial-scale=1.0"
+      content="height=device-height , width=device-width, initial-scale=1.0"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Bowlby One SC"
@@ -167,9 +167,9 @@
       <section class="part" attribute-in-html="attribute!">
         <h2>Small Social App</h2>
         <p>
-          Small social network like application with login registration ,
-          profile and the possibility to share posts metween users, watch other
-          profiles and like and comment posts
+          Small social network application with strong backend, registration, login with JWT token,
+          edit the profile and the possibility to share posts between users, watch other
+          profiles and like and comment posts.
         </p>
       </section>
 
@@ -182,12 +182,11 @@
             onmousedown="myFunction(this.id)"
             id="redirect-f"
           >
-            Info Page of Myself & Works Overview
+            Info Page With Details
           </a>
         </h2>
         <p>
-          Formal looking presentation page, With more indepth infos, is now new
-          and not responsive jet, i am still working on it.
+          Formal looking presentation page, With more indepth infos about myself, skills, best projects, indepth of the portfolio and contacts.
         </p>
       </section>
 
@@ -199,12 +198,11 @@
             onclick="return false"
             onmousedown="myFunction(this.id)"
             id="redirect-d"
-            >LODGE RENT RESPONSIVE WEBPAGE</a
+            >LODGE RENT WEBPAGE</a
           >
         </h2>
         <p>
-          A webpage made with sass for renting small houses and lodges for
-          weekends, fully responsive with modern design.
+          A fully responsive webpage made with SASS, in a modern design and contact form. The thema is a renting lodge service for weekends in the mountains.
         </p>
       </section>
 
@@ -217,12 +215,11 @@
             onmousedown="myFunction(this.id)"
             id="redirect-b"
           >
-            Webpage for travelling
+            Travelling Landing Page
           </a>
         </h2>
         <p>
-          Responsive webpage on thema Travelling , modern looking and full of
-          colors
+          Responsive webpage on thema Travelling, with css flexbox, has colorful layout and many pictures with welcome animation.  
         </p>
       </section>
 
@@ -234,11 +231,11 @@
             onclick="return false"
             onmousedown="myFunction(this.id)"
             id="redirect-a"
-            >SHOOTING GAME!</a
+            >JAVASCRIPT SHOOTING GAME!</a
           >
         </h2>
         <p>
-          A simple game made with javascript and html, the enemies are coming
+          Game made with javascript and html, the enemies are coming
           from the top and the hero destroyes them with laser, there are 3
           level/states, gaining experience the hero and laser are gitting
           better.
@@ -253,7 +250,7 @@
             onclick="return false"
             onmousedown="myFunction(this.id)"
             id="redirect-e"
-            >SIMPLE SLIDER</a
+            > ONE SIMPLE SLIDER</a
           >
         </h2>
         <p>
@@ -271,7 +268,7 @@
             onmousedown="myFunction(this.id)"
             id="redirect-c"
           >
-            Cool 3D feeling image gallery
+            3D feeling image gallery
           </a>
         </h2>
         <p>
@@ -281,17 +278,17 @@
       </section>
 
       <section class="part" attribute-in-html="attribute!">
-        <h2>subitle coming soon</h2>
+        <h2>coming soon</h2>
         <p>this project is not finished yet</p>
       </section>
 
       <section class="part" attribute-in-html="attribute!">
-        <h2>subitle coming soon</h2>
+        <h2>coming soon</h2>
         <p>this project is not finished yet</p>
       </section>
 
       <section class="part" attribute-in-html="attribute!">
-        <h2>subitle coming soon</h2>
+        <h2>coming soon</h2>
         <p>this project is not finished yet</p>
       </section>
 
