check before deploy

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -184,7 +184,7 @@
                 </ul>
               </p>
               <br>
-              <a target="_blank" href="http://preview.themeforest.net/item/petir-design-agency-html-template/full_screen_preview/22845229" class="btn-gradient border-gradient about-side-btn">Portfolio</a>
+              <a href="#portfolio" class="btn-gradient border-gradient about-side-btn">Portfolio</a>
             </div>
            </article>
            
@@ -249,7 +249,7 @@
         </div><!--container-->
       </section>
       <section class="background-primary section-portfolio-pages">
-        <div class="portfolio-pages">
+        <div class="portfolio-pages" id="portfolio">
           <h2 class="section-title text-center">Specific Of My Portfolio</h2>
           <h2 class="section-subtitle text-center">Content and Ideas</h2>
           <div class="container">
